seeding content to style

--- a/pages/Primitives/Typography.mdx
+++ b/pages/Primitives/Typography.mdx
@@ -1,7 +1,7 @@
 ---
 name: Typography
-route: '/typography'
-menu: 'Overview'
+route: '/primitives/typography'
+menu: 'Primitives'
 ---
 
 # Typography!
