committing before setting up theme

--- a/pages/Overview/IntroToDesignSystem.mdx
+++ b/pages/Overview/IntroToDesignSystem.mdx
@@ -5,3 +5,57 @@ menu: 'Overview'
 ---
 
 # Introduction
+
+## What is a design system?
+
+Despite common parlance, a design system is not just a style-guide or component library.
+A design system is a systematic, holistic approach to product design and development that includes thoughtful explanations, guidance, principles, and examples that help everyone understand what to use, when to use it, and how it should be used. 
+
+## How does a design system benefit us?
+
+Without a design system, problems and opportunities are more frequently solved on an ad-hoc basis. Designers, PMs, and engineers run the risk of approaching problems in a vacuum, like it was the first-time this problem ever existed, which causes inconsistencies and bloated code.
+A design system forces us to think holistically, enables us to better understand what already exists, and creates the opportunity for us reduce and reuse.
+
+## Goals
+
+By thoughtfully and thoroughly documenting guidance, examples, and specifications, our design system will elevate our ability to create an outstanding fuboTV product experience.
+To achieve that, our design system must be…
+
+## Intentional
+
+To create a product experience that feels absolutely seamless to the user — like we cared and loved every scenario and every detail. We thoroughly think through use-cases, identify requirements, and solve problems and opportunities holistically.
+
+## Empowering
+
+To enable all disciplines to contribute and build product experiences that are principled, high-quality, and consistent. By having a shared, all-encompassing, and living design system, we collaborate better together as well as operate independently better, as resources and scope dictate.
+
+## Maintainable
+
+To care for an ever-changing and growing product without simultaneously growing the burden on its design and engineering. By creating a constrained number of highly useful and reusable elements, we can create and iterate without constantly adding extra weight, solving the same issues over and over again — and changes can be one time, in one place.
+
+## Elements
+
+In a design system, there are element-types that range in scope, impact, and complexity. Element-types at one end of the scale are combined to create element-types at the next step in the scale.
+
+## Primitives (Atoms)
+
+Primitives are the smallest building blocks of the design system. They are rarely, if ever, used on their own. Instead, they are the base to which we refer when building anything else, especially components.
+
+Primitives include type-faces and their scales, icon-shapes, color-values, shapes, grids, and elevations.
+
+## Components (Molecules)
+
+Components are the direct product of Primitives. They are designed to solve tightly-scoped problems such as text-input or progress-metering. Components are highly reusable, combining together to solve all matters of larger-scoped problems.
+
+Components include buttons, text-input fields, card-containers, etc. 
+
+## Patterns (Organisms)
+
+Patterns are the direct product of combining Components. They are designed to solve larger-scoped problems such as the entire experience of video-playback, which includes the display of video, ability to control playback, and the ability to see progress of playback.
+Patterns include Renderers, Record All, a billing input form, etc.
+
+## Frameworks (Templates)
+
+Frameworks are open-ended solutions; instead of dictating the exact way in which a problem should be solved, Frameworks provide the principles, guidance, and general constructs necessary to solve problems in a holistic way. This creates a healthy balance of structure and flexibility to address a complex problem.
+
+Frameworks include Messaging, Detail Pages, Renderer Carrousels, etc.
